--- a/lib/index.html
+++ b/lib/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <title></title>
+    <title>splash screen</title>
   </head>
   <body>
     <script charset="utf-8">
-      if (process.env.ENVIRON == 'dev'){
-
+      if (process.env.ENVIRON == 'DEV'){
+        alert('toto');
       }else{
 
       }
